--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-qualification-ef-1",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@apollo/client": "^3.7.12",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +12,8 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,3 +50,4 @@
     "tailwindcss": "^3.3.2"
   }
 }
+
