--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "canvas-nest.js": "^2.0.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
@@ -50,4 +51,3 @@
     "tailwindcss": "^3.3.2"
   }
 }
-
