--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.9.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.9.3",
+    "tslib": "^2.5.0",
+    "tsparticles": "^2.9.3",
+    "tsparticles-engine": "^2.9.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
